@@ -1,0 +1,5 @@
+autom4te.cache
+config.log
+config.mak
+config.status
+gsweb.make
