@@ -2,3 +2,5 @@ derived_src
 shared_debug_obj
 GSWWOReplaceScript.sed
 WO*.wo
+WOExtensions.framework
+GSWExtensions.framework
